// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailCounter renders a counter with a pluralized label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dsPxDL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hgvosH"
      >
        <div
          class="RefreshableLabel__Wrapper-sc-1joylxa-0 bMgRju OptionalValue__StyledRefreshableLabel-sc-8k6d37-0 eRkFis"
        >
          <span
            aria-label="35 dogs"
            class="StyledText-sc-1sadyjn-0 iscINy"
          >
            35
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cQrzvg ClusterDetailCounter__Label-sc-qai318-0 kDtfEg"
      >
        dogs
      </span>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailCounter renders a simple counter 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dsPxDL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hgvosH"
      >
        <div
          class="RefreshableLabel__Wrapper-sc-1joylxa-0 bMgRju OptionalValue__StyledRefreshableLabel-sc-8k6d37-0 eRkFis"
        >
          <span
            aria-label="1 dog"
            class="StyledText-sc-1sadyjn-0 iscINy"
          >
            1
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cQrzvg ClusterDetailCounter__Label-sc-qai318-0 kDtfEg"
      >
        dog
      </span>
    </div>
  </div>
</div>
`;
